unpackaged/main/default/objects/Barrel_Recipe__c/Barrel_Recipe__c.object-meta.xml
<CustomObject>
    <description>For the Single Barrel Program, customers have the ability to create a barrel recipe which contains individual stave records</description>
    <label>Barrel Recipe</label>
    <nameField>
        <displayFormat>RECIPE-{00000}</displayFormat>
        <label>Barrel Recipe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Barrel Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>