unpackaged/main/default/objects/Barrel_Recipe__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <formula>Text(month(Datevalue(CreatedDate)))+"/"+Text(day(Datevalue(CreatedDate)))+"/"+Text(year(Datevalue(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Date</label>
    <type>Text</type>
</CustomField>