unpackaged/main/default/objects/Barrel_Recipe__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>