unpackaged/main/default/objects/Barrel_Recipe__c/fields/Recipe_Label__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Label__c</fullName>
    <formula>Text(Brand__c) + " - " + Text(month(Datevalue(CreatedDate)))+"/"+Text(day(Datevalue(CreatedDate)))+"/"+Text(year(Datevalue(CreatedDate)))</formula>
    <label>Recipe Label</label>
    <type>Text</type>
</CustomField>