unpackaged/main/default/objects/Barrel_Recipe__c/fields/Roasted_French_Mocha__c.field-meta.xml
<CustomField>
    <fullName>Roasted_French_Mocha__c</fullName>
    <label>Roasted French Mocha</label>
    <summarizedField>Stave__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Stave__c.Type__c</field>
        <operation>equals</operation>
        <value>Roasted French Mocha</value>
    </summaryFilterItems>
    <summaryForeignKey>Stave__c.Barrel_Recipe__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>