unpackaged/main/default/objects/Barrel_Recipe__c/fields/Seared_French_Cuvee__c.field-meta.xml
<CustomField>
    <fullName>Seared_French_Cuvee__c</fullName>
    <label>Seared French Cuvee</label>
    <summarizedField>Stave__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Stave__c.Type__c</field>
        <operation>equals</operation>
        <value>Seared French Cuvee</value>
    </summaryFilterItems>
    <summaryForeignKey>Stave__c.Barrel_Recipe__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>